# fable-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt
backend/data/: aesop_fables_processed.json
backend/src/: __init__.py  data_processor.py  embeddings.py  init_database.py  main.py  qdrant_manager.py
backend/tests/: conftest.py  test_data_processor.py  test_embeddings.py  test_init_database.py  test_main.py  test_qdrant_manager.py
src/: config.py  dependencies.py  main.py
src/handlers/: __init__.py  fables.py  generate.py  health.py  search.py
src/models/: __init__.py  requests.py  responses.py
tests/: test_dependencies.py  test_generate.py  test_llm.py  test_main.py
