[project]
name = "fable-rag"
version = "1.0.0"
description = "Fable Story Retrieval-Augmented Generation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-dotenv==1.0.1",
    # Vector database
    "qdrant-client==1.12.1",
    # Embedding models
    "sentence-transformers==3.3.1",
    "torch==2.5.1",
    # LLM integrations
    "ollama==0.4.4",
    # Data processing
    "pandas==2.2.3",
    "numpy==2.2.1",
    # API utilities
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    # CORS support
    "python-multipart==0.0.18",
]

[project.scripts]
serve = "uvicorn:main"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "flake8==7.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
